--- a/main.css
+++ b/main.css
@@ -13,6 +13,44 @@ Button{
     border-radius: 10px;
 }
 
+Input{
+    height: 30px;
+    border: solid;
+    border-color: #181818;
+    border-width: 2px;
+    border-radius: 10px;
+    background-color: #3EB1c0;
+}
+
+.grid_container{
+    display: grid;
+    grid-template-areas: 'times . add_time';
+    height: 400px;
+}
+
+.timers_sect{
+    grid-area: times;
+    border: solid;
+    border-color: #181818;
+}
+
+.add_timer{
+    grid-area: add_time;
+    border: solid;
+    border-color: #181818;
+    width: 500px;
+    
+}
+
+.grid_in_sect{
+    display: grid;
+    grid-template-areas: 
+    'buttons buttons'
+    'label input'
+    '. add_button';
+    position: relative;
+}
+
 .Button_primary{
     background-color: #3EB1c0;
 }
@@ -37,4 +75,40 @@ Button{
 
 .Button_secondary:focus{
     background-color: #54cede;
+}
+
+.button_list{
+    grid-area: buttons;
+    list-style: none;
+    margin-left: 30px;
+}
+
+.button_list li{
+    display: inline-block;
+}
+
+
+.day_button{
+    background-color: #3EB1c0;
+    width:42px;
+    grid-area: buttons;
+}
+
+.day_button:hover{
+    background-color: #2DB7E2;
+}
+
+.input_time{
+    width: 64px;
+    grid-area: input;
+}
+
+.label{
+    grid-area: label;
+    margin-left: 12px;
+}
+
+.add_button{
+    grid-area: add_button;
+    margin-top: 220px;
 }
