--- a/main.css
+++ b/main.css
@@ -6,33 +6,28 @@
 
  body > div > h1{
     padding-bottom: 50px;
-    
 }
 
 body > div > figure{
     padding-bottom: 20px;
-    
 }
 
 body > div > h2{
-    padding-bottom: 50px;
-    
+    padding-bottom: 0px;
 }
 
 body > div > section{
-    padding-bottom: 40px;
-    
+    padding-bottom: 0px;
+    padding-top: 50px;
 }
 
 body > div > footer{
-    padding-top: 100px;
-
+    padding-top: 40px
 }
-    
 
 Button{
-    width: 100px;
-    height: 30px;
+    width: 300px;
+    height: 60px;
     border: solid;
     border-color: #181818;
     border-width: 2px;
@@ -42,26 +37,38 @@ Button{
 
 .Button_Boven {
     display: inline-block;
-    width: 100px;
-    height: 30px;
+    width: 300px;
+    height: 60px;
     border: solid;
     border-color: #181818;
     border-width: 2px;
     border-radius: 10px;
-    padding-top: 0px;
-    margin: 5px;
+    margin: 25px;
+    font-size: 22px;
+}
+
+.Button_midden {
+    display: inline-block;
+    width: 300px;
+    height: 60px;
+    border: solid;
+    border-color: #181818;
+    border-width: 2px;
+    border-radius: 10px;
+    margin: 25px;
+    font-size: 22px;
 }
 
 .Button_primary {
     display: inline-block;
-    width: 100px;
-    height: 30px;
+    width: 300px;
+    height: 60px;
     border: solid;
     border-color: #181818;
     border-width: 2px;
     border-radius: 10px;
-    padding-top: 0px;
-    margin: 5px;
+    margin: 25px;
+    font-size: 22px;
 }
  
 .Button_Boven{
@@ -74,6 +81,19 @@ Button{
 }
 
 .Button_boven:focus{
+    background-color: #8acdb9;
+}
+
+.Button_midden{
+    background-color: #3EB1c0;
+}
+
+.Button_midden:hover{
+    background-color: #2DB7E2;
+    cursor: pointer;
+}
+
+.Button_midden:focus{
     background-color: #8acdb9;
 }
 
@@ -94,16 +114,6 @@ Button{
     background-color: #FFF;
 
 }
-
-.Button_secondary:hover{
-    background-color: #7fcfda;
-}
-
-.Button_secondary:focus{
-    background-color: #54cede;
-}
-
-
  .wrapper {
     text-align: center;
 }
