--- a/main.css
+++ b/main.css
@@ -73,7 +73,8 @@ body > div > section{
 }
 
 body > div > footer{
-    padding-top: 40px
+    padding-top: 40px;
+    justify-content: center;
 }
 
 Button{
@@ -115,24 +116,24 @@ Button{
     display: flex; 
     justify-content: flex-start; 
     align-items: center; 
-    margin-left: 26%;
+    margin: auto;
+    width: 650px;
 }
 
+
+
 .Button_secondary {
-    width: 225px;
-    height: 55px; 
+    width: 300px;
+    height: 60px; 
     border: solid;
     border-color: #181818;
     border-width: 2px;
     border-radius: 10px;
     font-size: 22px;
-    margin: 10px; 
     margin-left:  0px;
     margin-bottom: 20px;
-}
+    padding: 0px;
 
-.feed_ammount_button{
-    width: 225px;
 }
 
 .feed-controls button {
@@ -143,35 +144,40 @@ Button{
     border-width: 2px;
     border-radius: 10px;
     font-size: 18px;
-    margin: 10px;
+    margin: 5px;
+    margin-top: 0px;
     margin-bottom: 20px;
     
 }
 
 span{
-    margin-left: 40%;
+    margin-top: 5px;
     font-size: 20px;
 }
 
+.feed_amount{
+    display: inline-flex;
+    justify-content: center;
+}
+
 .feed-controls{
-    display: flex;
-    align-items: center;
+    
 }
 
 .Button_primary {
-    width: 225px; 
-    height: 55px; 
+    width: 300px; 
+    height: 60px; 
     border: solid;
     border-color: #181818;
     border-width: 2px;
     border-radius: 10px;
     font-size: 22px; 
-    margin: 10px; 
     margin-bottom: 20px;
+
 }
 
 .feed_button_zelf{
-    padding-left: 75px;
+    padding-left: 50px;
 }
  
 .Button_Boven{
