--- a/inlog.css
+++ b/inlog.css
@@ -1,8 +1,13 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
-    color: #181818;
-    background-color: #F1F1F2;
+    color: #181818;  
 }
+
+body{
+    background: rgb(241,241,242);
+    background: radial-gradient(circle, rgba(241,241,242,1) 60%, rgba(62,177,192,1) 100%);
+}
+
 
  body > div > h1{
     padding-bottom: 0px;
