styling timer pagina

--- a/main.css
+++ b/main.css
@@ -160,10 +160,6 @@ span{
     justify-content: center;
 }
 
-.feed-controls{
-    
-}
-
 .Button_primary {
     width: 300px; 
     height: 60px; 
@@ -239,3 +235,21 @@ span{
 .button-container {
     display: inline-block;
 }
+
+@media only screen and (max-width: 732px) {
+    .feed-buttons{
+        display: block;
+        margin: auto;
+        width: 300px;
+    }
+    .feed_button_zelf{
+        padding: 0;
+    }
+    body > div > footer{
+        padding-top:0px;
+        margin-top: 10px;
+    }
+    .Button_midden{
+        margin: 10px;
+    }
+  }
