--- a/timers.css
+++ b/timers.css
@@ -8,9 +8,10 @@ body > div > section{
 }
 
 .grid_container{
+    padding-top: 100px;
     display: grid;
     grid-template-areas: 'times . add_time';
-    height: 300px;
+    height: 400px;
     width: 700px;
     margin: auto;
 }
@@ -97,13 +98,29 @@ body > div > section{
     margin-left: 10%;
     border-radius: 10px;
     margin-top: 15px;
+    text-align: center;
+    font-size: 32px;
 }
 
 .time{
-    padding-top: 16px;
+    padding-top: 8px;
 }
 
 .input_amount{
     width: 64px;
     margin-right: 10px;
+}
+
+@media only screen and (max-width: 770px) {
+    .grid_container{
+        padding-top: 20px;
+        display: block;
+        margin:auto;
+        width: 300px;
+    }
+
+    .timers_sect{
+        margin-bottom: 20px;
+    }
+    
 }
